--- a/css/style.css
+++ b/css/style.css
@@ -40,19 +40,30 @@ body {
 }
 
 
-.product-admin {
-    min-width: 300px;
-    margin-bottom: 20px;
-}
+
 
 .error-message {
     color: red;
+}
+
+.product-admin {
+    border: 1px solid #ccc;
+    max-width: 30%;
+    border-radius: 5px;
+    margin: 10px 10px; /* Agregar margen vertical */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+}
+
+.product-admin:hover {
+    transform: scale(1.05);
 }
 
 .product-image-admin {
     max-width: 60%;
     height: auto;
 }
+
 
 /* Estilo para el formulario de edición */
 .edit-form {
@@ -123,4 +134,62 @@ body {
     width: 400px;
     padding: 20px;
     box-shadow: 0px 0px 10px 0px #000;
+}
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.confirm-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.cancel-button {
+    background-color: #ccc;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+}
+/* Agrega una animación de entrada suave a los productos */
+.product-container.added-to-cart {
+    animation: fadeIn 0.5s;
+}
+
+.added-to-cart-animation {
+    animation-name: bounce; /* Nombre de la animación */
+    animation-duration: 1s; /* Duración de la animación */
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
 }
